Mon Oct  4 12:32:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/LSOCK_Stream.h:
          Doxygen changes

        * ace/Makefile.am:
          Removed zapped file

        * include/makeinclude/platform_sunos5_sunc++.GNU:
          Removed SUN_CC_HAS_PVFC_BUG, this got added 8 years ago and is
          used for any SunCC compiler version. If some old SunCC compiler breaks
          we can readd this flag for just that compiler version

Fri Oct  1 16:00:51 UTC 2010  William Otte  <wotte@zifnab>

        * COPYING:

          Updated to include DAnCE.

Fri Oct  1 11:55:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
        * ace/config-qnx-neutrino.h:
        * ace/config-qnx-rtp-common.h:
          Fixed redefinition warnings

        * ace/ace_for_tao.mpc:
          Zapped some files

        * ace/config-win32-common.h:
        * ace/config-win32-msvc.h:
        * ace/config-win32.h:
          Cleanup

        * ace/config-win32-ghs.h:
          Removed this file.

Thu Sep 30 10:49:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/mpc-ace.install:
          Improved

        * docs/bczar/bczar.html:
          Added DAnCE to doxygen instructions

Thu Sep 30 08:09:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IOStream.h:
        * ace/config-g++-common.h:
        * ace/config-hpux-11.00.h:
        * ace/config-linux-common.h:
        * ace/config-mvs.h:
        * ace/config-sunos5.5.h:
        * ace/config-win32-borland.h:
        * ace/config-win32-cegcc.h:
        * ace/config-win32-dmc.h:
        * ace/config-win32-ghs.h:
        * ace/config-win32-mingw.h:
        * ace/config-win32-msvc.h:
          Cleanup, move g++ version defines to config-g++-common.h

Thu Sep 30 05:45:10 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * ace/Cache_Map_Manager_T.h:
        * ace/Cache_Map_Manager_T.inl:
        * ace/Cache_Map_Manager_T.cpp: